[package]
name = "inth-oauth2"
version = "0.17.0-fork"

description = "OAuth2 client"
keywords = ["authentication", "authorization", "auth", "oauth"]

authors = ["Curtis McEnroe <programble@gmail.com>", "Alexander Korolev <kilork@yandex.ru>"]
license = "ISC"

repository = "https://github.com/kilork/inth-oauth2"
readme = "README.md"
edition = "2018"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4.0"
serde = "1"
serde_derive = "1"
serde_json = "1"
url = "2.1"

[dependencies.reqwest]
version = "0.10"
features = [
    "json", "blocking"
]
